# alarino

./: .gitignore  AGENTS.md  Dockerfile  README.md  alarino_nginx.conf  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  init_server.md
alarino_backend/: .dockerignore  .gitignore  Dockerfile  __init__.py  app.py  backend-setup.md  conda-requirements.txt  pip-requirements.txt  pyproject.toml  readme.md
alarino_backend/data/: __init__.py  create_tables.py  en-yo-dataset.json  generate_sitemap.py  proverbs_loader.py  seed_data.py  seed_data_utils.py  sitemap.xml  word_translations_loader.py
alarino_backend/data/datasets/: en-yo-dataset.json
alarino_backend/main/: __init__.py  app.py  daily_word.py  db_models.py  languages.py  llm_service.py  response.py  runtime.py  translation_service.py  utils.py
alarino_backend/migrations/: README  env.py
alarino_backend/migrations/versions/: 1233050fe93a_add_proverb_model.py  46094403aefa_initial_database_setup.py  6d05c39b56f5_add_indexing.py  7e3a89c4b21f_phase1_hygiene.py  a91f5e3b8c42_phase6a_senses_table.py  b3d217fa094e_phase6b_examples_sense_columns.py  (+8 more)
alarino_backend/shared_utils/: __init__.py  db_models.py
alarino_backend/tests/: conftest.py  test_app.py  test_bulk_upload.py  test_daily_word.py  test_db_models.py  test_llm_service.py  test_normalization.py  test_normalization_defenses.py  test_package.py  test_parts_of_speech.py  test_proverb_words.py  test_sense_layer.py  test_translation_service.py
alarino_backend/translate/: __init__.py  response.py  translation_service.py
(+138 files in other folders)
