[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alarino-backend"
version = "0.1.0"
description = "Backend package metadata for the Alarino Flask API."
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
  "Flask==3.1.0",
  "Flask-Cors==3.0.10",
  "Flask-Migrate==4.1.0",
  "Flask-SQLAlchemy==3.1.1",
  "gradient==3.0.0b4",
  "psycopg2-binary==2.9.9",
  "python-dotenv==1.1.0",
  "SQLAlchemy==2.0.40",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["alarino_backend*"]

[tool.setuptools.package-data]
"alarino_backend.data" = [
  "datasets/*",
  "readme.md",
  "sitemap.xml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
